# genetic-fws

./: .gitignore  Cargo.toml  firstrun.txt
src/: fchar.rs  genetics.rs  main.rs  svm.rs
