[package]
name = "fws2"
version = "0.1.0"
authors = ["Shelvacu <shelvacu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#indicatif = "0.15.0"
fnv = "1.0.7"
rand = "0.8.3"
decorum = "0.3.1"
serde_json = "1.0.61"
serde = "1.0.123"
serde_derive = "1.0.123"
libflate = "1.0.3"
